<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/muscle_group"
                android:layout_alignRight="@+id/linearLayout"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/muscle_group"
                android:lines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single"
            android:id="@+id/single_double"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/num_of_sets"
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical"
                android:layout_alignRight="@+id/linearLayout"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:id="@+id/sets_picker" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/break_t"
                android:layout_weight="1"
                android:layout_alignRight="@+id/linearLayout"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ex_break"
                android:inputType="numberDecimal"
                android:layout_weight="3"
                android:lines="1"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/seconds"
                android:layout_weight="1"
                android:layout_alignRight="@+id/linearLayout"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id = "@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pictures"
            android:onClick="openGallery"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name"
                android:layout_alignRight="@+id/linearLayout"/>
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />
            <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ex_name_1"
                android:lines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30px" />
        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/description"
                android:layout_alignRight="@+id/linearLayout"/>

            <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/machine_num_1"
                android:lines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/weight"
                android:layout_alignRight="@+id/linearLayout"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ex_weight_1"
                android:inputType="numberDecimal"
                android:lines="1"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">



            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ex_repeats_1"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:lines="1"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/repeats"
                android:id="@+id/ex_length1"
                android:clickable="true"
                android:onClick="setRepeat1"
                android:layout_alignLeft="@+id/linearLayout"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/second_ex_params"
        android:layout_gravity="center_horizontal">
        <Space
            android:layout_width="match_parent"
            android:layout_height="100px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name"
                android:layout_alignRight="@+id/linearLayout"/>

            <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ex_name_2"
                android:lines="1"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/description"
                android:layout_alignRight="@+id/linearLayout"/>

            <AutoCompleteTextView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/machine_num_2"
                android:lines="1"
                android:singleLine="true"
                android:layout_weight="1" />

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/weight"
                android:layout_alignRight="@+id/linearLayout"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ex_weight_2"
                android:inputType="numberDecimal"
                android:lines="1"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30px" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ex_repeats_2"
                android:inputType="numberDecimal"
                android:layout_weight="1"
                android:lines="1"
                android:singleLine="true"
                android:layout_gravity="center_horizontal" />
            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/repeats"
                android:id="@+id/ex_length2"
                android:clickable="true"
                android:onClick="setRepeat2"
                android:layout_alignLeft="@+id/linearLayout"/>




        </LinearLayout>

    </LinearLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="50dp" />
    </LinearLayout>
    </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveAndReturn"
            android:id="@+id/save_exercise"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="deleteAndReturn"
            android:id="@+id/delete_exercise"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>